added-developed-by-all-projects

--- a/FormValidation/index.html
+++ b/FormValidation/index.html
@@ -39,6 +39,8 @@
             </div>
             <button type="submit" id="submitBtn">Submit</button>
         </form>
+
+        <p style="margin-top: 24px;">Developed By <a href="https://github.com/dev-vivekkr30" style="padding: 12px; color: #202020; background-color: #f0f0f0;">Vivek Kumar</a></p>
     </div>
     
     <script src="main.js"></script>
