--- a/Guess My Number Game/index.html
+++ b/Guess My Number Game/index.html
@@ -38,7 +38,7 @@
             <p>🏆 High Score: <span class="high_score">0</span></p>
         </div>
     </div>
-
+    <p style="margin-top: 24px;">Developed By <a href="https://github.com/dev-vivekkr30" style="padding: 12px; color: #202020; background-color: #f0f0f0;">Vivek Kumar</a></p>
     <!-- Custom JS -->
     <script src="main.js"></script>
 </body>
