added-forcast-app-and-setup

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -29,7 +29,8 @@
                 <img class="weather-icon" src="images/sun-light.svg" alt="" srcset="">
                 <div class="temp">20°C</div>
             </div>
-            <div class="city">New Delhi <span class="city-time"></span></div>
+            <span class="weather-type mt-4">Weather</span>
+            <div class="city">New Delhi</div>
         </div>
 
         <!-- Humidity & Wind Section. -->
@@ -49,6 +50,53 @@
                 </div>
             </div>
         </div>
+
+        <!-- Weather Forecast Information -->
+        <div class="forecast-section">
+            <div class="forcard-card">
+                <p class="mb-2">Day 1</p>
+                <img class="forcast-icon" src="images/sun-light.svg" alt="" srcset="">
+                <h4 class="forecast-temp">23°C</h4>
+                <p class="forcast-weather">Cloud</p>
+            </div>
+            <div class="forcard-card">
+                <p class="mb-2">Day 2</p>
+                <img class="forcast-icon" src="images/sun-light.svg" alt="" srcset="">
+                <h4 class="forecast-temp">23°C</h4>
+                <p class="forcast-weather">Cloud</p>
+            </div>
+            <div class="forcard-card">
+                <p class="mb-2">Day 3</p>
+                <img class="forcast-icon" src="images/sun-light.svg" alt="" srcset="">
+                <h4 class="forecast-temp">23°C</h4>
+                <p class="forcast-weather">Cloud</p>
+            </div>
+            <div class="forcard-card">
+                <p class="mb-2">Day 4</p>
+                <img class="forcast-icon" src="images/sun-light.svg" alt="" srcset="">
+                <h4 class="forecast-temp">23°C</h4>
+                <p class="forcast-weather">Cloud</p>
+            </div>
+            <div class="forcard-card">
+                <p class="mb-2">Day 5</p>
+                <img class="forcast-icon" src="images/sun-light.svg" alt="" srcset="">
+                <h4 class="forecast-temp">23°C</h4>
+                <p class="forcast-weather">Cloud</p>
+            </div>
+            <div class="forcard-card">
+                <p class="mb-2">Day 6</p>
+                <img class="forcast-icon" src="images/sun-light.svg" alt="" srcset="">
+                <h4 class="forecast-temp">23°C</h4>
+                <p class="forcast-weather">Cloud</p>
+            </div>
+            <div class="forcard-card">
+                <p class="mb-2">Day 7</p>
+                <img class="forcast-icon" src="images/sun-light.svg" alt="" srcset="">
+                <h4 class="forecast-temp">23°C</h4>
+                <p class="forcast-weather">Cloud</p>
+            </div>
+        </div>
+        <!-- Weather Forecast Information Ends -->
     </div>
 
     <!-- Bootstarp Script -->
