--- a/Signeasy Signature App/app.html
+++ b/Signeasy Signature App/app.html
@@ -32,20 +32,20 @@
                 <div class="mb-3">
                     <label for="stroke-color-label" class="form-label">Stroke Color: <span
                             class="color-value fw-bold ms-2" style="letter-spacing: 2px;">#fffff</span></label>
-                    <input type="color" class="form-control p-1 rounded" id="stroke-color">
+                    <input type="color" class="form-control p-1 rounded" id="color-picker">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="stroke-color-label" class="form-label">Background Color: <span
                             class="color-value fw-bold ms-2" style="letter-spacing: 2px;">#fffff</span></label>
-                    <input type="color" class="form-control p-1 rounded" id="stroke-color">
+                    <input type="color" class="form-control p-1 rounded" id="canvas-color">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="stroke-color-label" class="form-label">Stroke Size:</label>
-                    <select class="form-select" aria-label="Default select example">
+                    <select class="form-select" id="font-picker" aria-label="Default select example">
                         <option selected>Select</option>
                         <option value="5">5px</option>
                         <option value="10">10px</option>
@@ -56,12 +56,31 @@
                 </div>
             </div>
         </div>
+        <!-- My canvas -->
+        <canvas class="canvas rounded" id="mycanvas">
+
+        </canvas>
+
+        <!-- buttons -->
+        <div class="mt-4">
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <a href="#signeasy-app" id="clearbtn" class="main-btn me-3 bg-warning border-warning" style="display: block; width: 100%;">Clear Canvas</a>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <a href="#signeasy-app" id="savebtn" class="main-btn me-3" style="display: block; width: 100%;">Download Signature</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- App Section Ends -->
     <!-- Bootstrap JS Link -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <!-- JS -->
+    <script src="JS/main.js"></script>
 </body>
 
 </html>
